[package]
name = "sentry-cloudflare"
version = "0.1.0"
edition = "2021"
authors = ["David Herberth <github@dav1d.de>", "Abid Omar <contact@omarabid.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#worker = "*"
worker = { git = "https://github.com/Dav1dde/workers-rs.git", rev = "5a24cc5d", package = "worker" }
serde = "*"
serde_json = "*"
uuid = "*"
time = { version = "0.3", features = ["formatting", "parsing"] }
tracing = "0.1"
tracing-subscriber = "0.3"
web-sys = { version = "0.3", features = ["Crypto", "SubtleCrypto", "CryptoKey", "HmacImportParams", "WorkerGlobalScope"] }
wasm-bindgen = "0.2"
js-sys = "0.3"
url = { version = "2", features = ["serde"] }
thiserror = "*"
git-version = "*"
