[package]
name = "sentry-cloudflare"
version = "0.1.2"
edition = "2021"
authors = ["David Herberth <github@dav1d.de>", "Abid Omar <contact@omarabid.com>"]
description = """
not usuable for now.
"""
license = "GPL-3.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
worker = { version = "0.0.13", package = "worker-plus" }
serde = "1"
serde_json = "1"
uuid = "1.2"
time = { version = "0.3", features = ["formatting", "parsing"] }
tracing = "0.1"
tracing-subscriber = "0.3"
web-sys = { version = "0.3", features = ["Crypto", "SubtleCrypto", "CryptoKey", "HmacImportParams", "WorkerGlobalScope"] }
wasm-bindgen = "0.2"
js-sys = "0.3"
url = { version = "2", features = ["serde"] }
thiserror = "1"
#git-version = "0.3.5"
